Refactor: Change HTTP method annotations to GetMapping for /sort, /search, /tag operations